[project]
name = "deyang1112-github-io"
version = "0.1.0"
description = ""
authors = [
    {name = "deyang1112",email = "deyang1112@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "deyang1112"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
